<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/paddingOrMar_M"
    android:paddingRight="@dimen/paddingOrMar_M"
    android:scrollbars="none"
    tools:context="com.example.android.footballquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/footballquiz_header"
            style="@style/footballquiz_header_style"
            android:src="@drawable/titolo" />

        <TextView
            android:id="@+id/q_fut_1"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_1" />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer1_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans_1" />

            <RadioButton
                android:id="@+id/answer1_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans_2" />

            <RadioButton
                android:id="@+id/answer1_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q1_ans_3" />

            <RadioButton
                android:id="@+id/answer1_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_2"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_2" />

        <CheckBox
            android:id="@+id/answer2_1"
            style="@style/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans_1" />

        <CheckBox
            android:id="@+id/answer2_2"
            style="@style/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans_2" />

        <CheckBox
            android:id="@+id/answer2_3"
            style="@style/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans_3" />

        <CheckBox
            android:id="@+id/answer2_4"
            style="@style/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_ans_4" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_3"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_3" />

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer3_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_ans_1" />

            <RadioButton
                android:id="@+id/answer3_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_ans_2" />

            <RadioButton
                android:id="@+id/answer3_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q3_ans_3" />

            <RadioButton
                android:id="@+id/answer3_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_4"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_4" />

        <RadioGroup
            android:id="@+id/radio_group4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer4_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_ans_1" />

            <RadioButton
                android:id="@+id/answer4_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_ans_2" />

            <RadioButton
                android:id="@+id/answer4_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q4_ans_3" />

            <RadioButton
                android:id="@+id/answer4_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_5"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_5" />

        <RadioGroup
            android:id="@+id/radio_group5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer5_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_ans_1" />

            <RadioButton
                android:id="@+id/answer5_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_ans_2" />

            <RadioButton
                android:id="@+id/answer5_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q5_ans_3" />

            <RadioButton
                android:id="@+id/answer5_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_6"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_6" />

        <RadioGroup
            android:id="@+id/radio_group6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer6_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_ans_1" />

            <RadioButton
                android:id="@+id/answer6_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_ans_2" />

            <RadioButton
                android:id="@+id/answer6_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q6_ans_3" />

            <RadioButton
                android:id="@+id/answer6_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_7"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_7" />

        <RadioGroup
            android:id="@+id/radio_group7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer7_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7_ans_1" />

            <RadioButton
                android:id="@+id/answer7_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7_ans_2" />

            <RadioButton
                android:id="@+id/answer7_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q7_ans_3" />

            <RadioButton
                android:id="@+id/answer7_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_8"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_8" />

        <RadioGroup
            android:id="@+id/radio_group8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer8_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8_ans_1" />

            <RadioButton
                android:id="@+id/answer8_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8_ans_2" />

            <RadioButton
                android:id="@+id/answer8_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q8_ans_3" />

            <RadioButton
                android:id="@+id/answer8_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_9"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_9" />

        <RadioGroup
            android:id="@+id/radio_group9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer9_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_ans_1" />

            <RadioButton
                android:id="@+id/answer9_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_ans_2" />

            <RadioButton
                android:id="@+id/answer9_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q9_ans_3" />

            <RadioButton
                android:id="@+id/answer9_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_ans_4" />
        </RadioGroup>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/paddingOrMar_XL"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/q_fut_10"
            style="@style/questionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_fut_10" />

        <RadioGroup
            android:id="@+id/radio_group10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingOrMar_M">

            <RadioButton
                android:id="@+id/answer10_1"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q10_ans_1" />

            <RadioButton
                android:id="@+id/answer10_2"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q10_ans_2" />

            <RadioButton
                android:id="@+id/answer10_3"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:text="@string/q10_ans_3" />

            <RadioButton
                android:id="@+id/answer10_4"
                style="@style/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q10_ans_4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/paddingOrMar_S"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backtomain_button"
                style="@style/buttonDesign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home" />

            <Button
                android:id="@+id/submit_button"
                style="@style/buttonDesign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_button" />

            <Button
                android:id="@+id/share_button"
                style="@style/buttonDesign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
