<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
     tools:context="com.example.android.footballquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_titoloapp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/paddingOrMar_S"
            android:layout_gravity="center_horizontal|center"
            android:layout_weight="1.2"
            android:contentDescription="@string/content_logoApp"
            android:src="@drawable/titolo" />

        <EditText
            android:id="@+id/name"
            style="@style/editText"
            android:layout_marginTop="@dimen/paddingOrMar_S"
            android:fontFamily="@font/advent_pro_light"
            android:hint="@string/EnterNameField" />

        <Button
            android:id="@+id/colored_button"
            style="@style/buttonDesign"
            android:layout_height="36dp"
            android:onClick="StartQuizBody"
            android:text="@string/ButtonStart" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/paddingOrMar_S"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_imageHome"
            android:src="@drawable/sfondo2" />
    </LinearLayout>
</LinearLayout>
